Modified navigation bar for admin -  Manli

--- a/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewroles.xhtml
@@ -15,7 +15,7 @@
         <ui:define name="content">
             <c:set var="root" value="${request.contextPath}" />
             <div class="container" >
-
+                <h2>View Roles</h2>
                 <p:panel header="View Roles" style="margin-bottom:10px;">
                     <h:form>
                         <!--Only should company selection if it is super user-->
