--- a/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/viewusers.xhtml
@@ -15,7 +15,8 @@
         <!-- Override Content -->
         <ui:define name="content">
             <div class="container" >
-                <p:panel header="View Roles" style="margin-bottom:10px;">
+                <h2>View Users</h2>
+                <p:panel header="View Users" style="margin-bottom:10px;">
                     <h:form id="form">
                         <!--Only should company selection if it is super user-->
 
