--- a/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/resetpassword.xhtml
@@ -16,7 +16,7 @@
             <h:form>
                 <script type="text/javascript">
                     $(document).ready(function() {
-                        $(".btnResetEmail").click(function(){
+                        $(".btnResetEmail").click(function() {
                             load();
                         });
                     });
@@ -25,8 +25,8 @@
                         $("#loadingImg").addClass("hide");
                         $(".btnResetEmail").removeAttr("disabled");
                     }
-                    function fail() {
-                        $.notify("Password Reset Fail!", "success");
+                    function fail(errMsg) {
+                        $.notify("Password Reset Fail! " + errMsg, "error");
                         $("#loadingImg").addClass("hide");
                         $(".btnResetEmail").removeAttr("disabled");
                     }
@@ -34,6 +34,7 @@
                         $(".btnResetEmail").attr("disabled", "disabled");
                         $("#loadingImg").removeClass("hide");
                     }
+
                 </script>
                 <div class="container">
                     <div class="row">
