--- a/MerlionPortal/MerlionPortal-war/web/services.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/services.xhtml
@@ -24,9 +24,9 @@
                         <div class="thumbnail">
                             <img src="img/1pl.jpg" class="service-image" />
                             <div class="caption">
-                                <h2 class="service-title">1PL Provider</h2>
+                                <h2 class="service-title">Package 1</h2>
                                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae scelerisque orci. Nam auctor odio ipsum, vel elementum ex suscipit in. Nam lorem massa, consequat ut euismod et, aliquet nec ante. Donec ultricies ex dapibus lorem congue, in placerat libero eleifend. Aliquam elit nisi, rhoncus pretium justo a, scelerisque condimentum magna. In fermentum ante nec lorem porttitor, vel scelerisque tellus placerat. Integer auctor sem non varius iaculis. Mauris luctus elit sem, nec venenatis ligula vestibulum non. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. .</div>
-                                <h4 class="service-cost">$75/yr</h4>
+                                <h4 class="service-cost">$7,000/yr</h4>
                                 <button class="btn btn-success" id="1plBuyBtn" onclick="toggleModal();">Buy Now</button>
                             </div>
                         </div>
@@ -35,9 +35,9 @@
                         <div class="thumbnail">
                             <img src="img/2pl.jpg" class="service-image" />
                             <div class="caption">
-                                <h2 class="service-title">2PL Provider</h2>
+                                <h2 class="service-title">Package 2</h2>
                                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae scelerisque orci. Nam auctor odio ipsum, vel elementum ex suscipit in. Nam lorem massa, consequat ut euismod et, aliquet nec ante. Donec ultricies ex dapibus lorem congue, in placerat libero eleifend. Aliquam elit nisi, rhoncus pretium justo a, scelerisque condimentum magna. In fermentum ante nec lorem porttitor, vel scelerisque tellus placerat. Integer auctor sem non varius iaculis. Mauris luctus elit sem, nec venenatis ligula vestibulum non. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. .</div>
-                                <h4 class="service-cost">$155/yr</h4>
+                                <h4 class="service-cost">$6,000/yr</h4>
                                 <button class="btn btn-success" id="2plBuyBtn" onclick="toggleModal();">Buy Now</button>
                             </div>
                         </div>
@@ -46,9 +46,9 @@
                         <div class="thumbnail">
                             <img src="img/3pl.jpg" class="service-image" />
                             <div class="caption">
-                                <h2 class="service-title">3PL Provider</h2>
+                                <h2 class="service-title">Package 3</h2>
                                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae scelerisque orci. Nam auctor odio ipsum, vel elementum ex suscipit in. Nam lorem massa, consequat ut euismod et, aliquet nec ante. Donec ultricies ex dapibus lorem congue, in placerat libero eleifend. Aliquam elit nisi, rhoncus pretium justo a, scelerisque condimentum magna. In fermentum ante nec lorem porttitor, vel scelerisque tellus placerat. Integer auctor sem non varius iaculis. Mauris luctus elit sem, nec venenatis ligula vestibulum non. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. .</div>
-                                <h4 class="service-cost">$300/yr</h4>
+                                <h4 class="service-cost">$5,000/yr</h4>
                                 <button class="btn btn-success" id="3plBuyBtn" onclick="toggleModal();">Buy Now</button>
                             </div>
                         </div>
@@ -57,9 +57,9 @@
                         <div class="thumbnail">
                             <img src="img/4pl.jpg" class="service-image" />
                             <div class="caption">
-                                <h2 class="service-title">4PL Provider</h2>
+                                <h2 class="service-title">Package 4</h2>
                                 <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae scelerisque orci. Nam auctor odio ipsum, vel elementum ex suscipit in. Nam lorem massa, consequat ut euismod et, aliquet nec ante. Donec ultricies ex dapibus lorem congue, in placerat libero eleifend. Aliquam elit nisi, rhoncus pretium justo a, scelerisque condimentum magna. In fermentum ante nec lorem porttitor, vel scelerisque tellus placerat. Integer auctor sem non varius iaculis. Mauris luctus elit sem, nec venenatis ligula vestibulum non. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. .</div>
-                                <h4 class="service-cost">$500/yr</h4>
+                                <h4 class="service-cost">6,000/yr</h4>
                                 <button class="btn btn-success" id="4plBuyBtn" onclick="toggleModal();">Buy Now</button>
                             </div>
                         </div>
